force-app/main/default/objects/MM2FinancialTransaction__x/MM2FinancialTransaction__x.object-meta.xml
<CustomObject>
    <description>FinancialTransactions</description>
    <externalDataSource>MMODATAPOC</externalDataSource>
    <externalName>FinancialTransaction</externalName>
    <label>MM2FinancialTransaction</label>
    <pluralLabel>MM2FinancialTransactions</pluralLabel>
</CustomObject>