force-app/main/default/objects/MM2FinancialTransaction__x/fields/AdminTransactionDesc__c.field-meta.xml
<CustomField>
    <fullName>AdminTransactionDesc__c</fullName>
    <externalDeveloperName>AdminTransactionDesc</externalDeveloperName>
    <label>AdminTransactionDesc</label>
    <length>128</length>
    <type>Text</type>
</CustomField>