force-app/main/default/objects/MM2FinancialTransaction__x/fields/AgreementNumber__c.field-meta.xml
<CustomField>
    <fullName>AgreementNumber__c</fullName>
    <externalDeveloperName>AgreementNumber</externalDeveloperName>
    <label>AgreementNumber</label>
    <length>128</length>
    <referenceTargetField>Asset.AgreementNumber__c</referenceTargetField>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>MM2FinancialTransactions</relationshipLabel>
    <relationshipName>MM2FinancialTransactions</relationshipName>
    <type>IndirectLookup</type>
</CustomField>