force-app/main/default/objects/MM2FinancialTransaction__x/fields/BankAccNumber__c.field-meta.xml
<CustomField>
    <fullName>BankAccNumber__c</fullName>
    <externalDeveloperName>BankAccNumber</externalDeveloperName>
    <label>BankAccNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>