force-app/main/default/objects/MM2FinancialTransaction__x/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <externalDeveloperName>BankName</externalDeveloperName>
    <label>BankName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>