force-app/main/default/objects/MM2FinancialTransaction__x/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <externalDeveloperName>DueDate</externalDeveloperName>
    <label>DueDate</label>
    <type>DateTime</type>
</CustomField>