force-app/main/default/objects/MM2FinancialTransaction__x/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <externalDeveloperName>EffectiveDate</externalDeveloperName>
    <label>EffectiveDate</label>
    <type>DateTime</type>
</CustomField>