force-app/main/default/objects/MM2FinancialTransaction__x/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <externalDeveloperName>Frequency</externalDeveloperName>
    <label>Frequency</label>
    <length>128</length>
    <type>Text</type>
</CustomField>