force-app/main/default/objects/MM2FinancialTransaction__x/fields/MoneySourceCode__c.field-meta.xml
<CustomField>
    <fullName>MoneySourceCode__c</fullName>
    <externalDeveloperName>MoneySourceCode</externalDeveloperName>
    <label>MoneySourceCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>