force-app/main/default/objects/MM2FinancialTransaction__x/fields/PaidBy__c.field-meta.xml
<CustomField>
    <fullName>PaidBy__c</fullName>
    <externalDeveloperName>PaidBy</externalDeveloperName>
    <label>PaidBy</label>
    <length>128</length>
    <type>Text</type>
</CustomField>