force-app/main/default/objects/MM2FinancialTransaction__x/fields/PaymentByCash__c.field-meta.xml
<CustomField>
    <fullName>PaymentByCash__c</fullName>
    <externalDeveloperName>PaymentByCash</externalDeveloperName>
    <label>PaymentByCash</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>