force-app/main/default/objects/MM2FinancialTransaction__x/fields/PaymentByDivd__c.field-meta.xml
<CustomField>
    <fullName>PaymentByDivd__c</fullName>
    <externalDeveloperName>PaymentByDivd</externalDeveloperName>
    <label>PaymentByDivd</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>