force-app/main/default/objects/MM2FinancialTransaction__x/fields/PaymentByLoan__c.field-meta.xml
<CustomField>
    <fullName>PaymentByLoan__c</fullName>
    <externalDeveloperName>PaymentByLoan</externalDeveloperName>
    <label>PaymentByLoan</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>