force-app/main/default/objects/MM2FinancialTransaction__x/fields/ProcessedDate__c.field-meta.xml
<CustomField>
    <fullName>ProcessedDate__c</fullName>
    <externalDeveloperName>ProcessedDate</externalDeveloperName>
    <label>ProcessedDate</label>
    <type>DateTime</type>
</CustomField>