force-app/main/default/objects/MM2FinancialTransaction__x/fields/ReversalInd__c.field-meta.xml
<CustomField>
    <fullName>ReversalInd__c</fullName>
    <externalDeveloperName>ReversalInd</externalDeveloperName>
    <label>ReversalInd</label>
    <length>128</length>
    <type>Text</type>
</CustomField>