force-app/main/default/objects/MM2FinancialTransaction__x/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <externalDeveloperName>Status</externalDeveloperName>
    <label>Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>