force-app/main/default/objects/MM2FinancialTransaction__x/fields/SubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>SubmissionDate__c</fullName>
    <externalDeveloperName>SubmissionDate</externalDeveloperName>
    <label>SubmissionDate</label>
    <type>DateTime</type>
</CustomField>