force-app/main/default/objects/MM2FinancialTransaction__x/fields/TotalPayment__c.field-meta.xml
<CustomField>
    <fullName>TotalPayment__c</fullName>
    <externalDeveloperName>TotalPayment</externalDeveloperName>
    <label>TotalPayment</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>