force-app/main/default/objects/MM2FinancialTransaction__x/fields/TransactionCode__c.field-meta.xml
<CustomField>
    <fullName>TransactionCode__c</fullName>
    <externalDeveloperName>TransactionCode</externalDeveloperName>
    <label>TransactionCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>