force-app/main/default/objects/MM2FinancialTransaction__x/fields/TransactionDesc__c.field-meta.xml
<CustomField>
    <fullName>TransactionDesc__c</fullName>
    <externalDeveloperName>TransactionDesc</externalDeveloperName>
    <label>TransactionDesc</label>
    <length>128</length>
    <type>Text</type>
</CustomField>