force-app/main/default/objects/MM2FinancialTransaction__x/fields/TransactionNumber__c.field-meta.xml
<CustomField>
    <fullName>TransactionNumber__c</fullName>
    <externalDeveloperName>TransactionNumber</externalDeveloperName>
    <label>TransactionNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>