force-app/main/default/objects/MM2FinancialTransaction__x/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <externalDeveloperName>TransactionType</externalDeveloperName>
    <label>TransactionType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>